--- a/app/src/main/res/layout/viewpager_design.xml
+++ b/app/src/main/res/layout/viewpager_design.xml
@@ -3,7 +3,7 @@
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="230dp"
+    android:layout_height="240dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     app:cardElevation="2dp"
     app:cardCornerRadius="2dp"
@@ -50,35 +50,39 @@
             android:layout_toRightOf="@id/imgcar1"
             android:layout_marginTop="20dp" />
 
-        <LinearLayout
-            android:layout_width="320dp"
-            android:layout_height="0dp"
-            android:layout_below="@id/imgcar1"
-            android:layout_marginTop="22dp"
-            android:layout_centerHorizontal="true"
-            />
 
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/textdescription"
+            android:padding="5dp"
+            android:orientation="horizontal"
             android:id="@+id/linear">
 
             <ImageButton
+                android:id="@+id/share"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
-                android:src="@drawable/ic_share_black_24dp"
+                android:layout_marginLeft="5dp"
                 android:background="#00000000"
-                android:id="@+id/share"/>
+                android:src="@drawable/ic_share_black_24dp" />
+
+            <!--<ImageButton-->
+                <!--android:id="@+id/save"-->
+                <!--android:layout_width="56dp"-->
+                <!--android:layout_height="56dp"-->
+                <!--android:layout_margin="20dp"-->
+                <!--android:layout_gravity="center_vertical"-->
+                <!--android:src="@drawable/ic_save_black_24dp" />-->
 
             <ImageButton
                 android:id="@+id/wallpaper"
                 android:layout_width="56dp"
                 android:layout_height="56dp"
+                android:layout_marginLeft="230dp"
                 android:background="#00000000"
                 android:onClick="setWallpaper"
-                android:layout_marginLeft="260dp"
                 android:src="@drawable/ic_wallpaper_black_24dp" />
 
 
