--- a/app/src/main/res/layout/viewpager_design.xml
+++ b/app/src/main/res/layout/viewpager_design.xml
@@ -9,7 +9,8 @@
     app:cardCornerRadius="2dp"
     android:layout_margin="5dp"
     app:cardBackgroundColor="@color/cardView"
-    android:id="@+id/card1">
+    android:id="@+id/card1"
+    android:padding="16dp">
 
     <RelativeLayout
         android:layout_width="match_parent"
